--- a/scr/style.css
+++ b/scr/style.css
@@ -37,8 +37,7 @@ html, body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     position: relative;
-    border-top: 20px solid #f0f4f8; /* Вернули верхнюю границу */
-    border-bottom: 20px solid #f0f4f8; /* Вернули верхнюю границу */
+
 }
 
 /* Оформление формы внутри */
@@ -48,8 +47,7 @@ html, body {
     height: 900px;
     border: none;
     border-radius: 15px; /* Теперь закругление внутри тоже есть */
-    margin-top: -50px;
-    margin-bottom: -100px;
+
     overflow: hidden;
 }
 
@@ -63,18 +61,19 @@ body::-webkit-scrollbar {
 .video-container {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: auto;
     overflow: hidden;
 }
 
 #wedding-video {
+    aspect-ratio: 16/9;
     width: 100vw;
-    height: 100vh;
+    height: auto;
     object-fit: cover;
-    display: block;
-    object-position: center 40%;
-
+        object-position: center 40%;
 }
+
+
 
 .play-btn {
     position: absolute;
